2001-04-11  Martin Baulig  <baulig@suse.de>

	* gnome-program.c (gnome_program_locate_file): Return NULL if
	`ret_locations' is given.

	* gnome-program.c (gnome_program_initv): Call libgnome_type_init ()
	instead of g_type_init (), moved g_type_init () call into
	libgnome_type_init ().

	* libgnomeP.h (libgnome_type_init): Added function prototype.

	* Makefile.am: Create libgnome.defs and the type stuff using
	gnome-maketypes.awk and gnome-makeenums.pl.

	* libgnome-boxed.defs: New file.

	* libgnometypes.c: New file.

2001-04-11  Martin Baulig  <baulig@suse.de>

	* libgnome.h: Use #include <libgnome/*.h> instead of "libgnome/*.h"
	and #include <libgnome/gnome-ditem.h>.

2001-04-11  Martin Baulig  <baulig@suse.de>

	* gnome-util.h (PATH_SEP, PATH_SEP_STR): Moved to libgnomeP.h.
	(g_is_image_filename): Removed function prototype.

	* gnome-util.h (g_file_exists): Removed; use g_file_test() instead.

2001-03-24  Martin Baulig  <baulig@suse.de>

	* libgnome-2.0.pc.in: Depend on gconf-2.0.

2001-02-26  jacob berkman  <jacob@ximian.com>

	* gnome-url.c: default to using nautilus for help browsing if it
	is available

2000-07-26  John Sullivan  <sullivan@eazel.com>

	* gnome-sound.c (use_sound): Moved this function out of a
	#ifndef HAVE_LIBAUDIOFILE and into #ifdef HAVE_ESD.
	This fixes the build breakage caused earlier today by Miguel's change.

2000-07-11  Miguel de Icaza  <miguel@gnu.org>

	* gnome-sound.c (gnome_sound_init): Store the esound hostname
	here.
	(gnome_sound_play): Use the use_sound routine here.
	(gnome_sound_sample_load): ditto.
	(use_sound): Delayed initialization of sound.

2000-05-27  Miguel de Icaza  <miguel@helixcode.com>

	* gnome-exec.c (gnome_execute_async_with_env_fds): Invoke setsid()
	before execing the child process, as some applications terminate
	by doing kill (0, SIGTERM) (mgp), so when we launch them from the
	file manager they get the SIGTERM Message as well

2000-04-03  Miguel de Icaza  <miguel@gnu.org>
